<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/dark"
    tools:context="com.example.ubantu.coursaide_admin.MainActivity_MT17015"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/white_rounde_rec"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        android:paddingTop="20dp">


        <EditText
            android:id="@+id/us_cname_editT"
            style="@style/form_text"

            android:layout_height="46dp"
            android:hint="@string/new_spl_name"
            android:inputType=""

           />
        <Space
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:layout_weight="1" >
        </Space>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/us_branch"
                style="@style/form_text"
                android:layout_width="113dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/branch"
                 />

            <Spinner
                android:id="@+id/us_branch_spinner"
                style="@style/for_spinner"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/Branches"
             />
        </LinearLayout>
        <Space
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:layout_weight="1" >
        </Space>
        <Button
            android:id="@+id/add_splz_button"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_login"
            android:text="@string/add"
            android:textColor="#eeeeee"
            android:layout_gravity="center_horizontal"
         />
        <Space
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:layout_weight="1" >
        </Space><Space
        android:layout_width="10dp"
        android:layout_height="20dp"
        android:layout_weight="1" >
    </Space>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ub_del_splz"
                style="@style/form_text"
                android:layout_width="116dp"
                android:layout_height="25dp"

                android:layout_weight="1"
                android:text="@string/specialization"
               />

            <Spinner
                android:id="@+id/us_branch_Del_spinner2"
                style="@style/for_spinner"
                android:layout_height="match_parent"
                android:layout_weight="1"
             />
        </LinearLayout>
        <Space
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:layout_weight="1" >
        </Space>

        <Button
            android:id="@+id/delete_splz_button"
            android:layout_width="140dp"
            android:layout_height="wrap_content"

            android:layout_gravity="center_horizontal"
            android:background="@drawable/background_login"
            android:text="@string/delete"
            android:textColor="#eeeeee" />
        <Space
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:layout_weight="1" >
        </Space>

        <Space
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:layout_weight="1" >
        </Space>

    </LinearLayout>
</ScrollView>




    <!--
    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        android:layout_gravity="start">
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/navigation_menu">



    </android.support.design.widget.NavigationView>
    -->
